Softmax Loss is running

--- a/step7a_covsnn_triplet.ipynb
+++ b/step7a_covsnn_triplet.ipynb
@@ -1375,8 +1375,8 @@
     "axs[0].set_xlabel(\"Epoch\")\n",
     "axs[0].set_ylabel(\"Loss\")\n",
     "axs[0].legend()\n",
-    "axs[1].plot(train_results[\"epoch\"], train_results[\"accuracy_euclidean\"], label=\"Training\")\n",
-    "axs[1].plot(val_results[\"epoch\"], val_results[\"accuracy_euclidean\"], label=\"Validation\")\n",
+    "axs[1].plot(train_results[\"epoch\"], train_results[\"accuracy\"], label=\"Training\")\n",
+    "axs[1].plot(val_results[\"epoch\"], val_results[\"accuracy\"], label=\"Validation\")\n",
     "axs[1].set_xlabel(\"Epoch\")\n",
     "axs[1].set_ylabel(\"Accuracy\")\n",
     "axs[1].legend()\n",
@@ -1407,6 +1407,7 @@
     "\n",
     "# load best model\n",
     "best_model = SentenceTransformer(output_dir)\n",
+    "best_model.to(\"cuda\")\n",
     "\n",
     "# print test duration\n",
     "import time\n",
