viral-mutation, CoV-ProtGPT2, Muscle submodules

--- a/step10_plot_performance.ipynb
+++ b/step10_plot_performance.ipynb
@@ -181,7 +181,7 @@
     "plt.rc('legend', fontsize=font_size)\n",
     "plt.rc('figure', titlesize=font_size)\n",
     "plt.tight_layout()\n",
-    "plt.savefig('global_performance.pdf')\n",
+    "plt.savefig('figures/global_performance.pdf')\n",
     "plt.show()\n"
    ]
   },
