--- a/step10_plot_umap.ipynb
+++ b/step10_plot_umap.ipynb
@@ -207,7 +207,7 @@
     "plt.xlabel(\"UMAP Dimension 1\")\n",
     "plt.ylabel(\"UMAP Dimension 2\")\n",
     "plt.tight_layout()\n",
-    "plt.savefig(\"umap_variants.pdf\")\n",
+    "plt.savefig(\"figures/umap_variants.pdf\")\n",
     "plt.show()"
    ]
   },
@@ -381,7 +381,7 @@
     "plt.xlabel(\"UMAP Dimension 1\")\n",
     "plt.ylabel(\"UMAP Dimension 2\")\n",
     "plt.tight_layout()\n",
-    "plt.savefig(\"umap_variants_new.pdf\")\n",
+    "plt.savefig(\"figures/umap_variants_new.pdf\")\n",
     "plt.show()"
    ]
   },
