Adding ESM2 baseline

--- a/CSCS_ranking.ipynb
+++ b/CSCS_ranking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
     "    df_ranked = get_ranked_df(df_combined)\n",
     "\n",
     "    # Prepare data for the merged table\n",
-    "    top_k_values = [100, 500, 1000]\n",
+    "    top_k_values = [300, 600, 900, 1200]\n",
     "    sort_metrics = ['rank_by_scsp', 'rank_by_scip']\n",
     "    counts = []\n",
     "    percentages = []\n",
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -159,12 +159,16 @@
        "  <thead>\n",
        "    <tr>\n",
        "      <th>Top-K</th>\n",
-       "      <th colspan=\"3\" halign=\"left\">Top-100</th>\n",
-       "      <th colspan=\"3\" halign=\"left\">Top-500</th>\n",
-       "      <th colspan=\"3\" halign=\"left\">Top-1000</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">Top-300</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">Top-600</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">Top-900</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">Top-1200</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Source</th>\n",
+       "      <th>Eris</th>\n",
+       "      <th>New</th>\n",
+       "      <th>GPT</th>\n",
        "      <th>Eris</th>\n",
        "      <th>New</th>\n",
        "      <th>GPT</th>\n",
@@ -179,37 +183,48 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>rank_by_scsp</th>\n",
-       "      <td>33</td>\n",
-       "      <td>48</td>\n",
-       "      <td>19</td>\n",
-       "      <td>225</td>\n",
-       "      <td>177</td>\n",
-       "      <td>98</td>\n",
-       "      <td>478</td>\n",
-       "      <td>292</td>\n",
-       "      <td>230</td>\n",
+       "      <td>126</td>\n",
+       "      <td>120</td>\n",
+       "      <td>54</td>\n",
+       "      <td>274</td>\n",
+       "      <td>205</td>\n",
+       "      <td>121</td>\n",
+       "      <td>421</td>\n",
+       "      <td>271</td>\n",
+       "      <td>208</td>\n",
+       "      <td>596</td>\n",
+       "      <td>333</td>\n",
+       "      <td>271</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>rank_by_scip</th>\n",
-       "      <td>50</td>\n",
-       "      <td>41</td>\n",
-       "      <td>9</td>\n",
-       "      <td>256</td>\n",
-       "      <td>178</td>\n",
-       "      <td>66</td>\n",
-       "      <td>518</td>\n",
-       "      <td>325</td>\n",
-       "      <td>157</td>\n",
+       "      <td>154</td>\n",
+       "      <td>110</td>\n",
+       "      <td>36</td>\n",
+       "      <td>301</td>\n",
+       "      <td>214</td>\n",
+       "      <td>85</td>\n",
+       "      <td>463</td>\n",
+       "      <td>301</td>\n",
+       "      <td>136</td>\n",
+       "      <td>622</td>\n",
+       "      <td>377</td>\n",
+       "      <td>201</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Top-K        Top-100         Top-500          Top-1000          \n",
-       "Source          Eris New GPT    Eris  New GPT     Eris  New  GPT\n",
-       "rank_by_scsp      33  48  19     225  177  98      478  292  230\n",
-       "rank_by_scip      50  41   9     256  178  66      518  325  157"
+       "Top-K        Top-300          Top-600           Top-900           Top-1200  \\\n",
+       "Source          Eris  New GPT    Eris  New  GPT    Eris  New  GPT     Eris   \n",
+       "rank_by_scsp     126  120  54     274  205  121     421  271  208      596   \n",
+       "rank_by_scip     154  110  36     301  214   85     463  301  136      622   \n",
+       "\n",
+       "Top-K                   \n",
+       "Source        New  GPT  \n",
+       "rank_by_scsp  333  271  \n",
+       "rank_by_scip  377  201  "
       ]
      },
      "metadata": {},
@@ -243,12 +258,16 @@
        "  <thead>\n",
        "    <tr>\n",
        "      <th>Top-K</th>\n",
-       "      <th colspan=\"3\" halign=\"left\">Top-100</th>\n",
-       "      <th colspan=\"3\" halign=\"left\">Top-500</th>\n",
-       "      <th colspan=\"3\" halign=\"left\">Top-1000</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">Top-300</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">Top-600</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">Top-900</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">Top-1200</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Source</th>\n",
+       "      <th>Eris</th>\n",
+       "      <th>New</th>\n",
+       "      <th>GPT</th>\n",
        "      <th>Eris</th>\n",
        "      <th>New</th>\n",
        "      <th>GPT</th>\n",
@@ -263,37 +282,48 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>rank_by_scsp</th>\n",
-       "      <td>33.0</td>\n",
-       "      <td>48.0</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>45.0</td>\n",
-       "      <td>35.4</td>\n",
-       "      <td>19.6</td>\n",
-       "      <td>47.8</td>\n",
-       "      <td>29.2</td>\n",
-       "      <td>23.0</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>45.7</td>\n",
+       "      <td>34.2</td>\n",
+       "      <td>20.2</td>\n",
+       "      <td>46.8</td>\n",
+       "      <td>30.1</td>\n",
+       "      <td>23.1</td>\n",
+       "      <td>49.7</td>\n",
+       "      <td>27.8</td>\n",
+       "      <td>22.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>rank_by_scip</th>\n",
-       "      <td>50.0</td>\n",
-       "      <td>41.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>51.2</td>\n",
-       "      <td>35.6</td>\n",
-       "      <td>13.2</td>\n",
+       "      <td>51.3</td>\n",
+       "      <td>36.7</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>50.2</td>\n",
+       "      <td>35.7</td>\n",
+       "      <td>14.2</td>\n",
+       "      <td>51.4</td>\n",
+       "      <td>33.4</td>\n",
+       "      <td>15.1</td>\n",
        "      <td>51.8</td>\n",
-       "      <td>32.5</td>\n",
-       "      <td>15.7</td>\n",
+       "      <td>31.4</td>\n",
+       "      <td>16.8</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Top-K        Top-100             Top-500             Top-1000            \n",
-       "Source          Eris   New   GPT    Eris   New   GPT     Eris   New   GPT\n",
-       "rank_by_scsp    33.0  48.0  19.0    45.0  35.4  19.6     47.8  29.2  23.0\n",
-       "rank_by_scip    50.0  41.0   9.0    51.2  35.6  13.2     51.8  32.5  15.7"
+       "Top-K        Top-300             Top-600             Top-900              \\\n",
+       "Source          Eris   New   GPT    Eris   New   GPT    Eris   New   GPT   \n",
+       "rank_by_scsp    42.0  40.0  18.0    45.7  34.2  20.2    46.8  30.1  23.1   \n",
+       "rank_by_scip    51.3  36.7  12.0    50.2  35.7  14.2    51.4  33.4  15.1   \n",
+       "\n",
+       "Top-K        Top-1200              \n",
+       "Source           Eris   New   GPT  \n",
+       "rank_by_scsp     49.7  27.8  22.6  \n",
+       "rank_by_scip     51.8  31.4  16.8  "
       ]
      },
      "metadata": {},
@@ -327,12 +357,16 @@
        "  <thead>\n",
        "    <tr>\n",
        "      <th>Top-K</th>\n",
-       "      <th colspan=\"3\" halign=\"left\">Top-100</th>\n",
-       "      <th colspan=\"3\" halign=\"left\">Top-500</th>\n",
-       "      <th colspan=\"3\" halign=\"left\">Top-1000</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">Top-300</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">Top-600</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">Top-900</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">Top-1200</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Source</th>\n",
+       "      <th>Eris</th>\n",
+       "      <th>New</th>\n",
+       "      <th>GPT</th>\n",
        "      <th>Eris</th>\n",
        "      <th>New</th>\n",
        "      <th>GPT</th>\n",
@@ -347,37 +381,48 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>rank_by_scsp</th>\n",
-       "      <td>89</td>\n",
-       "      <td>8</td>\n",
-       "      <td>3</td>\n",
-       "      <td>377</td>\n",
-       "      <td>84</td>\n",
-       "      <td>39</td>\n",
-       "      <td>704</td>\n",
-       "      <td>209</td>\n",
-       "      <td>87</td>\n",
+       "      <td>237</td>\n",
+       "      <td>41</td>\n",
+       "      <td>22</td>\n",
+       "      <td>445</td>\n",
+       "      <td>111</td>\n",
+       "      <td>44</td>\n",
+       "      <td>636</td>\n",
+       "      <td>187</td>\n",
+       "      <td>77</td>\n",
+       "      <td>844</td>\n",
+       "      <td>247</td>\n",
+       "      <td>109</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>rank_by_scip</th>\n",
-       "      <td>97</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>489</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "      <td>962</td>\n",
-       "      <td>14</td>\n",
-       "      <td>24</td>\n",
+       "      <td>292</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>586</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>868</td>\n",
+       "      <td>11</td>\n",
+       "      <td>21</td>\n",
+       "      <td>1137</td>\n",
+       "      <td>30</td>\n",
+       "      <td>33</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Top-K        Top-100         Top-500         Top-1000         \n",
-       "Source          Eris New GPT    Eris New GPT     Eris  New GPT\n",
-       "rank_by_scsp      89   8   3     377  84  39      704  209  87\n",
-       "rank_by_scip      97   1   2     489   5   6      962   14  24"
+       "Top-K        Top-300         Top-600          Top-900          Top-1200       \\\n",
+       "Source          Eris New GPT    Eris  New GPT    Eris  New GPT     Eris  New   \n",
+       "rank_by_scsp     237  41  22     445  111  44     636  187  77      844  247   \n",
+       "rank_by_scip     292   4   4     586    7   7     868   11  21     1137   30   \n",
+       "\n",
+       "Top-K              \n",
+       "Source        GPT  \n",
+       "rank_by_scsp  109  \n",
+       "rank_by_scip   33  "
       ]
      },
      "metadata": {},
@@ -411,12 +456,16 @@
        "  <thead>\n",
        "    <tr>\n",
        "      <th>Top-K</th>\n",
-       "      <th colspan=\"3\" halign=\"left\">Top-100</th>\n",
-       "      <th colspan=\"3\" halign=\"left\">Top-500</th>\n",
-       "      <th colspan=\"3\" halign=\"left\">Top-1000</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">Top-300</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">Top-600</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">Top-900</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">Top-1200</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Source</th>\n",
+       "      <th>Eris</th>\n",
+       "      <th>New</th>\n",
+       "      <th>GPT</th>\n",
        "      <th>Eris</th>\n",
        "      <th>New</th>\n",
        "      <th>GPT</th>\n",
@@ -431,37 +480,48 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>rank_by_scsp</th>\n",
-       "      <td>89.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>75.4</td>\n",
-       "      <td>16.8</td>\n",
-       "      <td>7.8</td>\n",
-       "      <td>70.4</td>\n",
-       "      <td>20.9</td>\n",
-       "      <td>8.7</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>13.7</td>\n",
+       "      <td>7.3</td>\n",
+       "      <td>74.2</td>\n",
+       "      <td>18.5</td>\n",
+       "      <td>7.3</td>\n",
+       "      <td>70.7</td>\n",
+       "      <td>20.8</td>\n",
+       "      <td>8.6</td>\n",
+       "      <td>70.3</td>\n",
+       "      <td>20.6</td>\n",
+       "      <td>9.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>rank_by_scip</th>\n",
-       "      <td>97.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>97.8</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>97.3</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>97.7</td>\n",
        "      <td>1.2</td>\n",
-       "      <td>96.2</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>2.4</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>96.4</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>94.8</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>2.8</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Top-K        Top-100           Top-500            Top-1000           \n",
-       "Source          Eris  New  GPT    Eris   New  GPT     Eris   New  GPT\n",
-       "rank_by_scsp    89.0  8.0  3.0    75.4  16.8  7.8     70.4  20.9  8.7\n",
-       "rank_by_scip    97.0  1.0  2.0    97.8   1.0  1.2     96.2   1.4  2.4"
+       "Top-K        Top-300            Top-600            Top-900             \\\n",
+       "Source          Eris   New  GPT    Eris   New  GPT    Eris   New  GPT   \n",
+       "rank_by_scsp    79.0  13.7  7.3    74.2  18.5  7.3    70.7  20.8  8.6   \n",
+       "rank_by_scip    97.3   1.3  1.3    97.7   1.2  1.2    96.4   1.2  2.3   \n",
+       "\n",
+       "Top-K        Top-1200             \n",
+       "Source           Eris   New  GPT  \n",
+       "rank_by_scsp     70.3  20.6  9.1  \n",
+       "rank_by_scip     94.8   2.5  2.8  "
       ]
      },
      "metadata": {},
@@ -472,16 +532,16 @@
      "output_type": "stream",
      "text": [
       "Counts for Eris & New & GPT:\n",
-      "CoV-SNN$^1$ (\\texttt{SP}) & 33 & 48 & 19 & 225 & 177 & 98 & 478 & 292 & 230 \\\\\n",
-      "CoV-SNN$^1$ (\\texttt{IP}) & 50 & 41 & 9 & 256 & 178 & 66 & 518 & 325 & 157 \\\\\n",
-      "CoV-SNN$^5$ (\\texttt{SP}) & 89 & 8 & 3 & 377 & 84 & 39 & 704 & 209 & 87 \\\\\n",
-      "CoV-SNN$^5$ (\\texttt{IP}) & 97 & 1 & 2 & 489 & 5 & 6 & 962 & 14 & 24 \\\\\n",
+      "CoV-SNN$^1$ (\\texttt{SP}) & 126 & 120 & 54 & 274 & 205 & 121 & 421 & 271 & 208 & 596 & 333 & 271 \\\\\n",
+      "CoV-SNN$^1$ (\\texttt{IP}) & 154 & 110 & 36 & 301 & 214 & 85 & 463 & 301 & 136 & 622 & 377 & 201 \\\\\n",
+      "CoV-SNN$^5$ (\\texttt{SP}) & 237 & 41 & 22 & 445 & 111 & 44 & 636 & 187 & 77 & 844 & 247 & 109 \\\\\n",
+      "CoV-SNN$^5$ (\\texttt{IP}) & 292 & 4 & 4 & 586 & 7 & 7 & 868 & 11 & 21 & 1137 & 30 & 33 \\\\\n",
       "\n",
       "Percentages for Eris:\n",
-      "CoV-SNN$^1$ (\\texttt{SP}) & 33.0\\% & 45.0\\% & 47.8\\% \\\\\n",
-      "CoV-SNN$^1$ (\\texttt{IP}) & 50.0\\% & 51.2\\% & 51.8\\% \\\\\n",
-      "CoV-SNN$^5$ (\\texttt{SP}) & 89.0\\% & 75.4\\% & 70.4\\% \\\\\n",
-      "CoV-SNN$^5$ (\\texttt{IP}) & 97.0\\% & 97.8\\% & 96.2\\% \\\\\n"
+      "CoV-SNN$^1$ (\\texttt{SP}) & 0.420 & 0.457 & 0.468 & 0.497 \\\\\n",
+      "CoV-SNN$^1$ (\\texttt{IP}) & 0.513 & 0.502 & 0.514 & 0.518 \\\\\n",
+      "CoV-SNN$^5$ (\\texttt{SP}) & 0.790 & 0.742 & 0.707 & 0.703 \\\\\n",
+      "CoV-SNN$^5$ (\\texttt{IP}) & 0.973 & 0.977 & 0.964 & 0.948 \\\\\n"
      ]
     }
    ],
@@ -504,15 +564,16 @@
     "# print percentages in latex format for selected indices\n",
     "\n",
     "print(\"Percentages for Eris:\")\n",
-    "selected_indices = [0, 3, 6] # for Eris only\n",
+    "selected_indices = [0, 3, 6, 9] # for Eris only\n",
     "\n",
     "for i, row in enumerate(percentages_0.iterrows()):\n",
-    "    selected_values = [row[1].values[j] for j in selected_indices]\n",
-    "    print(row_names_0[i].format(), '\\% & '.join(map(str, selected_values)) + \"\\% \\\\\\\\\")\n",
+    "    selected_values = [f\"{float(row[1].values[j]) / 100:.3f}\" for j in selected_indices]\n",
+    "    print(row_names_0[i].format(), \" & \".join(selected_values) + \" \\\\\\\\\")\n",
     "\n",
     "for i, row in enumerate(percentages_4.iterrows()):\n",
-    "    selected_values = [row[1].values[j] for j in selected_indices]\n",
-    "    print(row_names_4[i].format(), '\\% & '.join(map(str, selected_values)) + \"\\% \\\\\\\\\")\n",
+    "    selected_values = [f\"{float(row[1].values[j]) / 100:.3f}\" for j in selected_indices]\n",
+    "    print(row_names_4[i].format(), \" & \".join(selected_values) + \" \\\\\\\\\")\n",
+    "\n",
     "\n"
    ]
   },
