--- a/step11_experimental_data_preprocess.ipynb
+++ b/step11_experimental_data_preprocess.ipynb
@@ -334,7 +334,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pytorch38",
    "language": "python",
    "name": "python3"
   },
