--- a/step12_experimental_data_train_test.ipynb
+++ b/step12_experimental_data_train_test.ipynb
@@ -774,7 +774,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pytorch38",
    "language": "python",
    "name": "python3"
   },
