--- a/step13_experimental_data_roc_plot.ipynb
+++ b/step13_experimental_data_roc_plot.ipynb
@@ -93,7 +93,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pytorch38",
    "language": "python",
    "name": "python3"
   },
